--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -3,7 +3,7 @@
 /* ------ Misc (App-wide) ------ */
 
 .fadeIn {
-  animation-duration: .5s;
+  animation-duration: .65s;
 }
 
 .alert {
@@ -25,7 +25,7 @@
 }
 
 .container-fluid {
-  min-height: calc(100vh - 75px);
+  min-height: calc(100vh - 66px);
   position: relative;
 }
 
